# analyticserv

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_02_10_0845-87e7fe407b55_init_models.py
app/: constants.py  main.py
app/core/: config.py
app/core/db/: clickhouse.py
app/crud/clickhouse/: answer.py  base.py  event.py  level.py  level_value.py  report.py  schedule_time_slot.py
app/kafka/: analytic_consumer.py
app/models/clickhouse/: __init__.py  abstract.py  answer.py  event.py  level.py  level_value.py  report.py  schedule_time_slot.py
